feat: Crear el switch en el navbar y sidenav

--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
               <li>
                 <a href="#contact" class="waves-effect waves-js">Contacto</a>
               </li>
+              <li>
+                <div class="switch">
+                  <label>
+                    <i class="material-icons yellow-text text-accent-4">
+                      brightness_5
+                    </i>
+                    <input type="checkbox" id="theme-switcher-desktop" />
+                    <span class="lever"></span>
+                    <i class="material-icons indigo-text">brightness_2</i>
+                  </label>
+                </div>
+              </li>
             </ul>
           </div>
         </nav>
@@ -156,6 +168,14 @@
             Contacto
           </a>
         </li>
+        <div class="switch center-align">
+          <label>
+            <i class="material-icons yellow-text text-accent-4">brightness_5</i>
+            <input type="checkbox" id="" />
+            <span class="lever"></span>
+            <i class="material-icons indigo-text">brightness_2</i>
+          </label>
+        </div>
       </ul>
       <!-- Hero -->
       <div class="container header__content">
