feat: Separar el scss en varios archivos

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- Scrollreveal -->
     <script src="js/scrollreveal.js"></script>
   </head>
-  <body>
+  <body class="dark">
     <header class="header" id="header">
       <!-- Navbar -->
       <div class="navbar-fixed">
