feat: Crear variables de colores para el switch
Se arreglo la altura de los elementos del navbar.
Se utilizo la funcion color para obtener los colores.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header class="header" id="header">
       <!-- Navbar -->
       <div class="navbar-fixed">
-        <nav class="white">
+        <nav>
           <div class="container nav-wrapper">
             <a href="#" class="brand-logo">
               <picture>
@@ -129,12 +129,10 @@
               <li>
                 <div class="switch">
                   <label>
-                    <i class="material-icons yellow-text text-accent-4">
-                      brightness_5
-                    </i>
+                    <i class="material-icons tertiary-js-text">brightness_5</i>
                     <input type="checkbox" id="theme-switcher-desktop" />
                     <span class="lever"></span>
-                    <i class="material-icons indigo-text">brightness_2</i>
+                    <i class="material-icons secondary-js-text">brightness_2</i>
                   </label>
                 </div>
               </li>
@@ -170,10 +168,10 @@
         </li>
         <div class="switch center-align">
           <label>
-            <i class="material-icons yellow-text text-accent-4">brightness_5</i>
+            <i class="material-icons tertiary-js-text">brightness_5</i>
             <input type="checkbox" id="" />
             <span class="lever"></span>
-            <i class="material-icons indigo-text">brightness_2</i>
+            <i class="material-icons secondary-js-text">brightness_2</i>
           </label>
         </div>
       </ul>
