feat: Subrayar el enlace cuando se hace hover

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <main>
       <div class="container">
         <!-- About me -->
-        <section class="section" id="about">
+        <section class="section about" id="about">
           <h2 class="center-align">Sobre mí</h2>
           <div class="row">
             <div class="col s12 l9">
@@ -201,7 +201,7 @@
               <p>
                 Actualmente curso la mitad de la carrera de ingeniería en
                 sistemas computacionales 👨‍💻. Por el momento no cuento con
-                experiancia laboral, así que he incluido algunos
+                experiencia laboral, así que he incluido algunos
                 <a href="#proyects" class="primary-js-text">proyectos</a>
                 que yo me he propuesto durante los últimos dos años.
               </p>
