--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </div>
         </section>
         <!-- Skills -->
-        <section class="section" id="skills">
+        <section class="section skills" id="skills">
           <h2 class="center-align">Tecnologías</h2>
           <p>
             Actualmente sigo estudiando
