feat: Agregar clase proyects a la seccion

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           </div>
         </section>
         <!-- Proyects -->
-        <section class="section" id="proyects">
+        <section class="section proyects" id="proyects">
           <h2 class="center-align">Proyectos</h2>
           <div class="proyects__grid"></div>
         </section>
