feat: Agregar la clase contact a la seccion

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         </section>
       </div>
       <!-- Contact -->
-      <section class="section primary-js" id="contact">
+      <section class="section contact primary-js" id="contact">
         <div class="container">
           <div class="row">
             <div class="col s12 l8">
