feat: Crear variables para el navbar oscuro

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
               <li>
                 <div class="switch">
                   <label>
-                    <i class="material-icons tertiary-js-text">brightness_5</i>
+                    <i class="material-icons sun">brightness_5</i>
                     <input type="checkbox" id="theme-switcher-desktop" />
                     <span class="lever"></span>
-                    <i class="material-icons secondary-js-text">brightness_2</i>
+                    <i class="material-icons moon">brightness_2</i>
                   </label>
                 </div>
               </li>
@@ -144,34 +144,34 @@
       <ul class="sidenav" id="mobile-nav">
         <li>
           <a href="#about" class="waves-effect waves-js">
-            <i class="material-icons primary-js-text text-darken-2">person</i>
+            <i class="material-icons">person</i>
             Sobre mí
           </a>
         </li>
         <li>
           <a href="#skills" class="waves-effect waves-js">
-            <i class="material-icons primary-js-text text-darken-2">code</i>
+            <i class="material-icons">code</i>
             Tecnologías
           </a>
         </li>
         <li>
           <a href="#proyects" class="waves-effect waves-js">
-            <i class="material-icons primary-js-text text-darken-2">web</i>
+            <i class="material-icons">web</i>
             Proyectos
           </a>
         </li>
         <li>
           <a href="#contact" class="waves-effect waves-js">
-            <i class="material-icons primary-js-text text-darken-2">email</i>
+            <i class="material-icons">email</i>
             Contacto
           </a>
         </li>
         <div class="switch center-align">
           <label>
-            <i class="material-icons tertiary-js-text">brightness_5</i>
+            <i class="material-icons sun">brightness_5</i>
             <input type="checkbox" id="" />
             <span class="lever"></span>
-            <i class="material-icons secondary-js-text">brightness_2</i>
+            <i class="material-icons moon">brightness_2</i>
           </label>
         </div>
       </ul>
