feat: Crear variables para el color del enlace

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 Actualmente curso la mitad de la carrera de ingeniería en
                 sistemas computacionales 👨‍💻. Por el momento no cuento con
                 experiencia laboral, así que he incluido algunos
-                <a href="#proyects" class="primary-js-text">proyectos</a>
+                <a href="#proyects">proyectos</a>
                 que yo me he propuesto durante los últimos dos años.
               </p>
             </div>
