--- a/index.html
+++ b/index.html
@@ -410,13 +410,12 @@
     </footer>
     <!-- Plantillas -->
     <template id="card">
-      <!-- <div class="col s12 m6 l4"> -->
       <article class="card sticky-action hoverable">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="" alt="Captura del proyecto" />
         </div>
         <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4"></span>
+          <span class="card-title activator"></span>
           <p class="card__chips"></p>
         </div>
         <div class="card-action">
@@ -438,11 +437,10 @@
           </a>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4"></span>
+          <span class="card-title"></span>
           <p class="card-description"></p>
         </div>
       </article>
-      <!-- </div> -->
     </template>
     <!-- Materialize -->
     <script src="js/materialize.min.js"></script>
