--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="page-footer primary-js darken-2">
+    <footer class="page-footer">
       <div class="container center-align">
         <div class="section">
           &copy; 2022
