feat: Cambiar temas por medio de los inputs
El tema elegido se guarda en el local storage.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- Scrollreveal -->
     <script src="js/scrollreveal.js"></script>
   </head>
-  <body class="dark">
+  <body>
     <header class="header" id="header">
       <!-- Navbar -->
       <div class="navbar-fixed">
@@ -169,7 +169,7 @@
         <div class="switch center-align">
           <label>
             <i class="material-icons sun">brightness_5</i>
-            <input type="checkbox" id="" />
+            <input type="checkbox" id="theme-switcher-mobile" />
             <span class="lever"></span>
             <i class="material-icons moon">brightness_2</i>
           </label>
