feat: Usar imagenes claras en el modo oscuro
Se crearon logos de JSamuel y de tecnologias con colores blancos
para ser utilizadas en el modo oscuro.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <img
                   src="images/brand-logos/logo-horizontal.svg"
                   alt="Logo de JSamuel"
+                  id="navbar__logo"
                 />
               </picture>
             </a>
@@ -244,7 +245,7 @@
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/html-5.svg"
-                  class="skills__img"
+                  class="skills__img html"
                   alt="Logo de HTML 5"
                   title="Lennguaje de marcado de hipertexto"
                 />
@@ -255,7 +256,7 @@
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/css-3.svg"
-                  class="skills__img"
+                  class="skills__img css"
                   alt="Logo de CSS 3"
                   title="Lenguaje de estilos"
                 />
@@ -266,7 +267,7 @@
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/javascript.svg"
-                  class="skills__img"
+                  class="skills__img javascript"
                   alt="Logo de JavaScript"
                   title="Lenguaje de programación"
                 />
@@ -277,7 +278,7 @@
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/git-icon.svg"
-                  class="skills__img"
+                  class="skills__img git"
                   alt="Logo de Git"
                   title="Sistema de control de versiones"
                 />
@@ -288,7 +289,7 @@
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/github-icon.svg"
-                  class="skills__img"
+                  class="skills__img github"
                   alt="Logo de GitHub"
                   title="Servicio de repositorios de Git"
                 />
@@ -299,7 +300,7 @@
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/bootstrap.svg"
-                  class="skills__img"
+                  class="skills__img bootstrap"
                   alt="Logo de Bootstrap"
                   title="Framework de CSS"
                 />
@@ -310,7 +311,7 @@
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/materializecss.svg"
-                  class="skills__img"
+                  class="skills__img materialize"
                   alt="Logo de Materialize CSS"
                   title="Framework de CSS"
                 />
@@ -321,7 +322,7 @@
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/sass.svg"
-                  class="skills__img"
+                  class="skills__img materialize"
                   alt="Logo de Sass"
                   title="Preprocesador de CSS"
                 />
