fix: Evitar saltos de lineas en los parrafos
Se utilizo la configuracion de prettier HTML Whitespaces Sensitivity
con valor en strict, en lugar de ignore.

--- a/index.html
+++ b/index.html
@@ -194,17 +194,17 @@
             <div class="col s12 l9">
               <p>
                 Mi nombre es
-                <strong>José Samuel Aldana Pérez</strong>
-                , soy un joven mexicano 🇲🇽 apasionado por el mundo de la web,
-                aún soy un novato, pero lo disfruto porque estoy aprendiendo
-                nuevas cosas que me permiten crear lo que sea.
+                <strong>José Samuel Aldana Pérez</strong>, soy un joven mexicano
+                🇲🇽 apasionado por el mundo de la web, aún soy un novato, pero lo
+                disfruto porque estoy aprendiendo nuevas cosas que me permiten
+                crear lo que sea.
               </p>
               <p>
                 Actualmente curso la mitad de la carrera de ingeniería en
                 sistemas computacionales 👨‍💻. Por el momento no cuento con
                 experiencia laboral, así que he incluido algunos
-                <a href="#proyects">proyectos</a>
-                que yo me he propuesto durante los últimos dos años.
+                <a href="#proyects">proyectos</a> que yo me he propuesto durante
+                los últimos dos años.
               </p>
             </div>
             <div class="col s12 l3">
@@ -226,19 +226,11 @@
         <section class="section skills" id="skills">
           <h2 class="center-align">Tecnologías</h2>
           <p>
-            Actualmente sigo estudiando
-            <strong>JavaScript</strong>
-            , para después aprender
-            <strong>NodeJS</strong>
-            y
-            <strong>ReactJS</strong>
-            . En cuanto a CSS sé trabajar con
-            <strong>Flexbox</strong>
-            ,
-            <strong>CSS Grid</strong>
-            y utilizo la metodología
-            <strong>BEM</strong>
-            .
+            Actualmente sigo estudiando <strong>JavaScript</strong>, para
+            después aprender <strong>NodeJS</strong> y <strong>ReactJS</strong>.
+            En cuanto a CSS sé trabajar con <strong>Flexbox</strong>,
+            <strong>CSS Grid</strong> y utilizo la metodología
+            <strong>BEM</strong>.
           </p>
           <div class="row">
             <div class="col s6 l3">
