feat: Enlace para descargar curriculum

--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
 					alt="Logo blanco de JSamuel"
 				/>
 				<h1 class="center-align white-text">Desarrollador Frontend</h1>
+				<a
+					href="pdf/JSamuel-CV.pdf"
+					download
+					class="white-text center-align"
+					style="text-decoration: underline"
+					>Descargar CV</a
+				>
 			</div>
 		</header>
 		<main>
