refactor: Actualizar informacion
Nuevas tecnologías.
Nuevos proyectos.
Nueva descripción.
CV actualizado.

--- a/index.html
+++ b/index.html
@@ -182,14 +182,15 @@
 					src="images/brand-logos/logo-vertical-white.svg"
 					alt="Logo blanco de JSamuel"
 				/>
-				<h1 class="center-align white-text">Desarrollador Frontend</h1>
+				<h1 class="center-align white-text">Desarrollador Web</h1>
 				<a
 					href="pdf/JSamuel-CV.pdf"
 					download
 					class="white-text center-align"
 					style="text-decoration: underline"
-					>Descargar CV</a
 				>
+					Descargar CV
+				</a>
 			</div>
 		</header>
 		<main>
@@ -201,17 +202,17 @@
 						<div class="col s12 l9">
 							<p>
 								Mi nombre es
-								<strong>José Samuel Aldana Pérez</strong>, soy un joven mexicano
-								🇲🇽 apasionado por el mundo de la web, aún soy un novato, pero lo
-								disfruto porque estoy aprendiendo nuevas cosas que me permiten
-								crear lo que sea.
+								<strong>José Samuel Aldana Pérez</strong>
+								, soy un joven mexicano 🇲🇽 apasionado por el mundo de la web,
+								aún soy un novato, pero lo disfruto porque estoy aprendiendo
+								nuevas cosas que me permiten crear lo que sea.
 							</p>
 							<p>
-								Actualmente curso la mitad de la carrera de ingeniería en
-								sistemas computacionales 👨‍💻. Por el momento no cuento con
+								Actualmente curso el último semestre de la carrera de ingeniería
+								en sistemas computacionales 👨‍💻. Por el momento no cuento con
 								experiencia laboral, así que he incluido algunos
-								<a href="#proyects">proyectos</a> que yo me he propuesto durante
-								los últimos dos años.
+								<a href="#proyects">proyectos</a>
+								que yo me he propuesto durante los últimos cuatro años.
 							</p>
 						</div>
 						<div class="col s12 l3">
@@ -233,11 +234,15 @@
 				<section class="section skills" id="skills">
 					<h2 class="center-align">Tecnologías</h2>
 					<p>
-						Actualmente sigo estudiando <strong>JavaScript</strong>, para
-						después aprender <strong>NodeJS</strong> y <strong>ReactJS</strong>.
-						En cuanto a CSS sé trabajar con <strong>Flexbox</strong>,
-						<strong>CSS Grid</strong> y utilizo la metodología
-						<strong>BEM</strong>.
+						Actualmente estoy estudiando
+						<strong>Typescript</strong>
+						, para después aprender frameworks más robustos como
+						<strong>NestJS</strong>
+						y
+						<strong>NextJS</strong>
+						. Entre otras tecnologías que conozco son Java, PHP, Linux,
+						desarrollo y consumo de APIs REST, Sass y conocimientos básicos e
+						ingeniería de software, redes y computo en la nube.
 					</p>
 					<div class="skills__grid row"></div>
 				</section>
@@ -314,7 +319,7 @@
 		<footer class="page-footer">
 			<div class="container center-align">
 				<div class="section">
-					&copy; 2022
+					&copy; 2024
 					<strong>JSamuel</strong>
 				</div>
 			</div>
