feat: Actualizar información
- Se actualiza el about
- Se agrega la sección de experiencia laboral
- Se actualiza el CV

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			content="images/favicons/ms-icon-144x144.png"
 		/>
 		<meta name="theme-color" content="#ffffff" />
-		<title>JSamuel | Desarrollador Frontend</title>
+		<title>JSamuel | Desarrollador Web</title>
 		<!-- Styles -->
 		<link rel="stylesheet" href="css/custom.min.css" />
 		<!-- Materialize icons -->
@@ -203,16 +203,18 @@
 							<p>
 								Mi nombre es
 								<strong>José Samuel Aldana Pérez</strong>
-								, soy un joven mexicano 🇲🇽 apasionado por el mundo de la web,
-								aún soy un novato, pero lo disfruto porque estoy aprendiendo
-								nuevas cosas que me permiten crear lo que sea.
+								, soy un joven mexicano 🇲🇽 apasionado por el mundo del
+								desarrollo de software, lo disfruto porque me permiten crear lo
+								que sea.
 							</p>
 							<p>
 								Actualmente curso el último semestre de la carrera de ingeniería
-								en sistemas computacionales 👨‍💻. Por el momento no cuento con
-								experiencia laboral, así que he incluido algunos
+								en sistemas computacionales 👨‍💻, buscando donde realizar mis
+								residencias profesionales. 4 meses de
+								<a href="#experience">experiencia laboral</a>
+								y 5 años desarrollando
 								<a href="#proyects">proyectos</a>
-								que yo me he propuesto durante los últimos cuatro años.
+								personales.
 							</p>
 						</div>
 						<div class="col s12 l3">
@@ -237,14 +239,45 @@
 						Actualmente estoy estudiando
 						<strong>Typescript</strong>
 						, para después aprender frameworks más robustos como
-						<strong>NestJS</strong>
+						<strong>Angular</strong>
 						y
 						<strong>NextJS</strong>
-						. Entre otras tecnologías que conozco son Java, PHP, Linux,
-						desarrollo y consumo de APIs REST, Sass y conocimientos básicos e
-						ingeniería de software, redes y computo en la nube.
+						. Entre otras tecnologías que conozco son Java, Springboot, PHP,
+						Linux, desarrollo y consumo de APIs REST, Sass, patrones de diseño y
+						conocimientos básicos e ingeniería de software, redes y computo en
+						la nube.
 					</p>
 					<div class="skills__grid row"></div>
+				</section>
+				<!-- Experience -->
+				<section class="section experience" id="experience">
+					<h2 class="center-align">Experiencia laboral</h2>
+					<div>
+						<h3>Auxiliar de desarrollo</h3>
+						<span>
+							<i class="material-icons">business</i>
+							Grupo Castores 🦫
+						</span>
+						<span>
+							<i class="material-icons">date_range</i>
+							Junio 2024 - Presente
+						</span>
+						<p>
+							Apoyo al proyecto de Formación de Operadores 🚚, implementando
+							vistas con Java web, endpoints con Springboot y consultas SQL.
+							Gracias a este proyecto se logró automatizar la programación de
+							cursos y aumentar la asistencia de operadores.
+						</p>
+						<p>
+							Encargado de un proyecto de creación de nóminas 💳, donde tuve que
+							levantar requerimientos, análisis, planificación y desarrollo.
+						</p>
+						<p>
+							También aprendí sobre el proceso del ciclo de vida del software,
+							versionado, buenas prácticas de codificación y colaboración con
+							Git y Github.
+						</p>
+					</div>
 				</section>
 				<!-- Proyects -->
 				<section class="section proyects" id="proyects">
